--- a/assets/styles/_footer.scss
+++ b/assets/styles/_footer.scss
@@ -1,4 +1,5 @@
 .footer {
+  margin-top: 100px;
   width: 100%;
   flex-shrink: 0;
   @include padding-440;
